Added the left arrow to the showcase

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
   <header id="showcase">
     <div class="showcase-content">
+      <span class="left-arrow">
+        <i class="fas fa-angle-left"></i>
+      </span>
       <h1 class="l-txt showcase-heading">
         Sejam bem-vindos ao <br>Espaço Floral!
       </h1>
