--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="local-container">
       <div id="fachada">
         <a href="https://www.google.com/maps/place/15%C2%B049'48.6%22S+48%C2%B000'37.5%22W/@-15.8301751,-48.0126059,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d-15.8301751!4d-48.0104118">
-        <img src="img/vista-fachada.jpg" alt="Fachada de entrada do Vista Shopping">
+        <img class="local-img" src="img/vista-fachada.jpg" alt="Fachada de entrada do Vista Shopping">
         </a>
       </div>
       <div class="mapa"></div>
