Finished adding the media queries and now the site is fully responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/d89b79d8ff.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Montez|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/menu.css">
 </head>
 
 <body>
@@ -18,10 +19,29 @@
         alt="Quatro Flores de Lis coloridas em formato de cruz - Parte da Logo do Espaço Floral">
       <img id="logotxt" src="img/logotxt.png"
         alt="Texto em rosa escrito Espaço Floral - Parte da Logo do Espaço Floral">
+      <img id="logomini" src="img/small-logo.png" alt="Quatro Flores de Lis formando uma cruz com os dizeres 'Espaço Floral' em baixo">
     </h1>
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger">
+          <div></div>
+        </div>
+        <div class="menu">
+          <div>
+            <div>
+              <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="cursos.html">Cursos</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="loja.html">Loja</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+    </div>
     <ul class="nav-menu">
       <li class="nav-btn-li"><a href="index.html" class="nav-btn">Início</a></li>
-      <li class="nav-btn-li"><a href="sobre.html" class="nav-btn">Sobre</a></li>
       <li class="nav-btn-li"><a href="cursos.html" class="nav-btn">Cursos</a></li>
       <li class="nav-btn-li"><a href="servicos.html" class="nav-btn">Serviços</a></li>
       <li class="nav-btn-li"><a href="blog.html" class="nav-btn">Blog</a></li>
@@ -35,7 +55,7 @@
         <i class="fas fa-angle-left"></i>
       </span>
       <h1 class="l-txt showcase-heading">
-        Sejam bem-vindos ao <br>Espaço Floral!
+        Sejam bem-vindos ao Espaço Floral!
       </h1>
       <p class="showcase-txt m-txt">
         A Terapia Floral é terapia integrativa reconhecida pelo Ministério da Saúde e pode proporcionar bem-estar e
