Corrected some mistakes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div>
               <ul>
                 <li><a href="index.html">Início</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -41,11 +42,12 @@
         </div>
     </div>
     <ul class="nav-menu">
-      <li class="nav-btn-li"><a href="index.html" class="nav-btn">Início</a></li>
-      <li class="nav-btn-li"><a href="cursos.html" class="nav-btn">Cursos</a></li>
-      <li class="nav-btn-li"><a href="servicos.html" class="nav-btn">Serviços</a></li>
-      <li class="nav-btn-li"><a href="blog.html" class="nav-btn">Blog</a></li>
-      <li class="nav-btn-li"><a href="loja.html" class="nav-btn">Loja</a></li>
+      <li><a href="index.html" class="nav-btn">Início</a></li>
+      <li><a href="sobre.html" class="nav-btn">Sobre</a></li>
+      <li><a href="cursos.html" class="nav-btn">Cursos</a></li>
+      <li><a href="servicos.html" class="nav-btn">Serviços</a></li>
+      <li><a href="blog.html" class="nav-btn">Blog</a></li>
+      <li><a href="loja.html" class="nav-btn">Loja</a></li>
     </ul>
   </nav>
 
@@ -87,6 +89,11 @@
       <div class="item">
         <img src="img/auriculo.jpeg" alt="Orelha recebendo sementes de auriculoterapia">
         <h3>Auriculoterapia</h3>
+        <p>Agende sua sessão de auriculoterapia!</p>
+      </div>
+      <div class="item">
+        <img src="img/psicoterapia.jpg" alt="Orelha recebendo sementes de auriculoterapia">
+        <h3>Psicoterapia</h3>
         <p>Agende sua sessão de auriculoterapia!</p>
       </div>
     </div>
