Made adjustmenst that the client asked: smaller navbar, smaller showcase and smaller serviços section

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         <p>Agende sua sessão de auriculoterapia!</p>
       </div>
       <div class="item">
-        <img src="img/psicoterapia.jpg" alt="Orelha recebendo sementes de auriculoterapia">
+        <img src="img/psicoterapia.jpg" alt="Duas pessoas sentadas conversando">
         <h3>Psicoterapia</h3>
-        <p>Agende sua sessão de auriculoterapia!</p>
+        <p>Realizamos tratamentos psicoterápicos Jungianos</p>
       </div>
     </div>
   </section>
@@ -102,12 +102,8 @@
   <section id="localizacao">
     <h2 class="bg-light l-txt text-center">Conheça Nossa Loja</h2>
     <div id="local-container">
-      <div id="fachada">
-        <a href="https://www.google.com/maps/place/15%C2%B049'48.6%22S+48%C2%B000'37.5%22W/@-15.8301751,-48.0126059,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d-15.8301751!4d-48.0104118">
-        <img class="local-img" src="img/vista-fachada.jpg" alt="Fachada de entrada do Vista Shopping">
-        </a>
-      </div>
-      <div class="mapa"></div>
+      <div id="fachada"></div>
+      <div id="mapa"></div>
     </div>
   </section>
 
